Correções na documentação do código

--- a/LI2/latex/struct_e_s_t_a_d_o.tex
+++ b/LI2/latex/struct_e_s_t_a_d_o.tex
@@ -20,6 +20,13 @@ int {\bfseries jogador\+\_\+atual}
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Descrição detalhada}
+
+
+Definido na linha 17 do ficheiro dados.\+h.
+
+
+
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
-dados.\+h\end{DoxyCompactItemize}
+\mbox{\hyperlink{dados_8h}{dados.\+h}}\end{DoxyCompactItemize}
