--- a/LI2/latex/struct_c_o_o_r_d_e_n_a_d_a.tex
+++ b/LI2/latex/struct_c_o_o_r_d_e_n_a_d_a.tex
@@ -11,6 +11,13 @@ int {\bfseries linha}
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Descrição detalhada}
+
+
+Definido na linha 8 do ficheiro dados.\+h.
+
+
+
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
-dados.\+h\end{DoxyCompactItemize}
+\mbox{\hyperlink{dados_8h}{dados.\+h}}\end{DoxyCompactItemize}
