--- a/LI2/latex/struct_j_o_g_a_d_a.tex
+++ b/LI2/latex/struct_j_o_g_a_d_a.tex
@@ -11,6 +11,13 @@
 \end{DoxyCompactItemize}
 
 
+\doxysubsection{Descrição detalhada}
+
+
+Definido na linha 12 do ficheiro dados.\+h.
+
+
+
 A documentação para esta estrutura foi gerada a partir do seguinte ficheiro\+:\begin{DoxyCompactItemize}
 \item 
-dados.\+h\end{DoxyCompactItemize}
+\mbox{\hyperlink{dados_8h}{dados.\+h}}\end{DoxyCompactItemize}
