--- a/LI2/latex/files.tex
+++ b/LI2/latex/files.tex
@@ -1,6 +1,6 @@
 \doxysection{Lista de ficheiros}
 Lista de todos os ficheiros documentados com uma breve descrição\+:\begin{DoxyCompactList}
-\item\contentsline{section}{{\bfseries dados.\+c} }{\pageref{dados_8c}}{}
+\item\contentsline{section}{\mbox{\hyperlink{dados_8c}{dados.\+c}} }{\pageref{dados_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{dados_8h}{dados.\+h}} }{\pageref{dados_8h}}{}
 \item\contentsline{section}{{\bfseries interface.\+c} }{\pageref{interface_8c}}{}
 \item\contentsline{section}{\mbox{\hyperlink{interface_8h}{interface.\+h}} }{\pageref{interface_8h}}{}
