--- a/LI2/latex/refman.tex
+++ b/LI2/latex/refman.tex
@@ -183,6 +183,7 @@
 \input{struct_e_s_t_a_d_o}
 \input{struct_j_o_g_a_d_a}
 \chapter{Documentação do ficheiro}
+\input{dados_8c}
 \input{dados_8h}
 \input{interface_8h}
 \input{logica_8h}
