--- a/LI2/latex/logica_8h.tex
+++ b/LI2/latex/logica_8h.tex
@@ -9,7 +9,9 @@ int \mbox{\hyperlink{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}{jogar}} (\mbox
 int \mbox{\hyperlink{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}{jogada\+\_\+possivel}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, \mbox{\hyperlink{struct_c_o_o_r_d_e_n_a_d_a}{C\+O\+O\+R\+D\+E\+N\+A\+DA}} c)
 \begin{DoxyCompactList}\small\item\em Função que verifica se a jogada é possivel. \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}{jogo\+\_\+terminado}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e)
-\begin{DoxyCompactList}\small\item\em Verifica se o jogo terminou. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Verifica se o jogo terminou. \end{DoxyCompactList}\item 
+void \mbox{\hyperlink{logica_8h_a1f170009451fe70e20c0d67e9918e2a0}{tabuleiro\+\_\+ficheiro}} (\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$e, char linha\mbox{[}$\,$\mbox{]})
+\begin{DoxyCompactList}\small\item\em Coloca o tabuleiro e o estado do jogo num ficheiro. \end{DoxyCompactList}\end{DoxyCompactItemize}
 
 
 \doxysubsection{Descrição detalhada}
@@ -38,17 +40,17 @@ Função que verifica se a jogada é possivel.
 \end{DoxyReturn}
 
 
-Definido na linha 49 do ficheiro logica.\+c.
+Definido na linha 51 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{49                                               \{}
-\DoxyCodeLine{50     \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8c_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == BRANCA || \mbox{\hyperlink{dados_8c_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == PRETA ||}
-\DoxyCodeLine{51     abs((e-\/>ultima\_jogada.linha) -\/ (c.linha)) > 1 || abs((e-\/>ultima\_jogada.coluna) -\/ (c.coluna)) > 1) \{}
-\DoxyCodeLine{52         \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{53     \}}
-\DoxyCodeLine{54     \textcolor{keywordflow}{else} \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{55 \}}
+\DoxyCodeLine{51                                               \{}
+\DoxyCodeLine{52     \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == BRANCA || \mbox{\hyperlink{dados_8h_a6faa68373203923729ed38657aa0f768}{obter\_estado\_casa}}(e,c) == PRETA ||}
+\DoxyCodeLine{53     abs((e-\/>ultima\_jogada.linha) -\/ (c.linha)) > 1 || abs((e-\/>ultima\_jogada.coluna) -\/ (c.coluna)) > 1) \{}
+\DoxyCodeLine{54         \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{55     \}}
+\DoxyCodeLine{56     \textcolor{keywordflow}{else} \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{57 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}\label{logica_8h_ac313d7e553b1e2b5f266acb9bfff8141}} 
@@ -71,53 +73,66 @@ Função que usa os dados do estado e do input do jogador para fazer a jogada.
 \begin{DoxyReturn}{Retorna}
 Um novo estado atualizado conforme a jogada. 
 \end{DoxyReturn}
+\begin{quote}
+Coloca a peça na posição pedida pelo utilizador. \end{quote}
 
 
-Definido na linha 6 do ficheiro logica.\+c.
+\begin{quote}
+Coloca uma peça preta na casa anterior da peça branca. \end{quote}
+
+
+\begin{quote}
+Coloca a nova posição da peça branca como posição anterior para ser usada futuramente. \end{quote}
+
+
+\begin{quote}
+Determina se foi o jogador 1 ou 2 a jogar, e, consoante isto, coloca na array \char`\"{}jogadas\char`\"{} as informações correspondentes. \end{quote}
+
+
+\begin{quote}
+Incrementa o numero de jogadas. \end{quote}
+
+
+Definido na linha 8 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{6                                    \{}
-\DoxyCodeLine{7     \textcolor{keywordtype}{int} lin = c.linha;}
-\DoxyCodeLine{8     \textcolor{keywordtype}{int} col = c.coluna;}
-\DoxyCodeLine{9     \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8c_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
-\DoxyCodeLine{10     \textcolor{keywordtype}{int} jogadas = \mbox{\hyperlink{dados_8c_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
-\DoxyCodeLine{11 }
-\DoxyCodeLine{12     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}{jogada\_possivel}}(e,c) == 1) \{}
-\DoxyCodeLine{13         \textcolor{comment}{//Coloca a peça na posição pedida pelo utilizador.}}
-\DoxyCodeLine{14         e-\/>tab[lin][col] = BRANCA;}
-\DoxyCodeLine{15         \textcolor{comment}{//Coloca uma peça preta na casa anterior da peça branca.}}
-\DoxyCodeLine{16         e-\/>tab[(e-\/>ultima\_jogada).linha][(e-\/>ultima\_jogada).coluna] = PRETA;}
-\DoxyCodeLine{17         \textcolor{comment}{//Coloca a nova posição da peça branca como posição anterior para ser usada futuramente.}}
-\DoxyCodeLine{18         e-\/>ultima\_jogada.coluna = col;}
-\DoxyCodeLine{19         e-\/>ultima\_jogada.linha = lin;}
-\DoxyCodeLine{20 }
-\DoxyCodeLine{21         \textcolor{comment}{//Determinar se foi o jogador 1 ou 2 a jogar, e, consoante isto, coloca na array "jogadas" as informações correspondentes.}}
-\DoxyCodeLine{22         \textcolor{keywordflow}{if} (jog == 1) \{}
-\DoxyCodeLine{23             e-\/>jogadas[jogadas].jogador1.linha = lin;}
-\DoxyCodeLine{24             e-\/>jogadas[jogadas].jogador1.coluna = col;}
-\DoxyCodeLine{25         \} \textcolor{keywordflow}{else} \{}
-\DoxyCodeLine{26             e-\/>jogadas[jogadas].jogador2.linha = lin;}
-\DoxyCodeLine{27             e-\/>jogadas[jogadas].jogador2.coluna = col;}
-\DoxyCodeLine{28         \}}
-\DoxyCodeLine{29         \textcolor{keywordflow}{if} (jog == 1)}
-\DoxyCodeLine{30             e-\/>jogador\_atual = 2;}
-\DoxyCodeLine{31         \textcolor{keywordflow}{else} \{}
-\DoxyCodeLine{32             e-\/>jogador\_atual = 1;}
-\DoxyCodeLine{33             \textcolor{comment}{//Incrementa o numero de jogadas.}}
-\DoxyCodeLine{34             e-\/>num\_jogadas++;}
-\DoxyCodeLine{35         \}}
-\DoxyCodeLine{36         \textcolor{keywordflow}{return} 1;}
-\DoxyCodeLine{37     \}}
-\DoxyCodeLine{38     \textcolor{keywordflow}{else} \{}
-\DoxyCodeLine{39         \textcolor{keywordflow}{while} (\mbox{\hyperlink{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}{jogada\_possivel}}(e,c) == 0)\{}
-\DoxyCodeLine{40             printf(\textcolor{stringliteral}{"Jogada Invalida.\(\backslash\)n"});}
-\DoxyCodeLine{41             \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{42         \}}
-\DoxyCodeLine{43 }
-\DoxyCodeLine{44     \}}
-\DoxyCodeLine{45     \textcolor{keywordflow}{return} 0;}
-\DoxyCodeLine{46 \}}
+\DoxyCodeLine{8                                    \{}
+\DoxyCodeLine{9     \textcolor{keywordtype}{int} lin = c.linha;}
+\DoxyCodeLine{10     \textcolor{keywordtype}{int} col = c.coluna;}
+\DoxyCodeLine{11     \textcolor{keywordtype}{int} jog = \mbox{\hyperlink{dados_8h_ad6e326e4ffa57ca1ae0c75377ecefc8c}{obter\_jogador\_atual}}(e);}
+\DoxyCodeLine{12     \textcolor{keywordtype}{int} jogadas = \mbox{\hyperlink{dados_8h_a6cd0b387bdee9e18003c78852394aa63}{obter\_numero\_de\_jogadas}}(e);}
+\DoxyCodeLine{13 }
+\DoxyCodeLine{14     \textcolor{keywordflow}{if} (\mbox{\hyperlink{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}{jogada\_possivel}}(e,c) == 1) \{}
+\DoxyCodeLine{16         e-\/>tab[lin][col] = BRANCA;}
+\DoxyCodeLine{18         e-\/>tab[(e-\/>ultima\_jogada).linha][(e-\/>ultima\_jogada).coluna] = PRETA;}
+\DoxyCodeLine{20         e-\/>ultima\_jogada.coluna = col;}
+\DoxyCodeLine{21         e-\/>ultima\_jogada.linha = lin;}
+\DoxyCodeLine{22 }
+\DoxyCodeLine{24         \textcolor{keywordflow}{if} (jog == 1) \{}
+\DoxyCodeLine{25             e-\/>jogadas[jogadas].jogador1.linha = lin;}
+\DoxyCodeLine{26             e-\/>jogadas[jogadas].jogador1.coluna = col;}
+\DoxyCodeLine{27         \} \textcolor{keywordflow}{else} \{}
+\DoxyCodeLine{28             e-\/>jogadas[jogadas].jogador2.linha = lin;}
+\DoxyCodeLine{29             e-\/>jogadas[jogadas].jogador2.coluna = col;}
+\DoxyCodeLine{30         \}}
+\DoxyCodeLine{31         \textcolor{keywordflow}{if} (jog == 1)}
+\DoxyCodeLine{32             e-\/>jogador\_atual = 2;}
+\DoxyCodeLine{33         \textcolor{keywordflow}{else} \{}
+\DoxyCodeLine{34             e-\/>jogador\_atual = 1;}
+\DoxyCodeLine{36             e-\/>num\_jogadas++;}
+\DoxyCodeLine{37         \}}
+\DoxyCodeLine{38         \textcolor{keywordflow}{return} 1;}
+\DoxyCodeLine{39     \}}
+\DoxyCodeLine{40     \textcolor{keywordflow}{else} \{}
+\DoxyCodeLine{41         \textcolor{keywordflow}{while} (\mbox{\hyperlink{logica_8h_a97c7ad5b7c6b698beca8006e674b85da}{jogada\_possivel}}(e,c) == 0)\{}
+\DoxyCodeLine{42             printf(\textcolor{stringliteral}{"Jogada Invalida.\(\backslash\)n"});}
+\DoxyCodeLine{43             \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{44         \}}
+\DoxyCodeLine{45 }
+\DoxyCodeLine{46     \}}
+\DoxyCodeLine{47     \textcolor{keywordflow}{return} 0;}
+\DoxyCodeLine{48 \}}
 
 \end{DoxyCode}
 \mbox{\Hypertarget{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}\label{logica_8h_aea1fcb269536a2b7ee0d12518887cd09}} 
@@ -140,21 +155,128 @@ Verifica se o jogo terminou.
 \end{DoxyReturn}
 
 
-Definido na linha 58 do ficheiro logica.\+c.
+Definido na linha 60 do ficheiro logica.\+c.
 
 
 \begin{DoxyCode}{0}
-\DoxyCodeLine{58                                \{}
-\DoxyCodeLine{59     \textcolor{keywordtype}{int} r = 0;}
-\DoxyCodeLine{60     \textcolor{keywordflow}{if} (e -\/> num\_jogadas == 32 || (e-\/>ultima\_jogada.coluna == 0 \&\& e-\/>ultima\_jogada.linha == 7))}
-\DoxyCodeLine{61         r = 1;}
-\DoxyCodeLine{62     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{63         \textcolor{keywordflow}{if} ( e-\/> num\_jogadas == 32 || (e -\/>ultima\_jogada.linha == 0 \&\& e-\/>ultima\_jogada.coluna == 7))}
-\DoxyCodeLine{64             r = 2;}
-\DoxyCodeLine{65     \textcolor{keywordflow}{else}}
-\DoxyCodeLine{66         r = 0;}
-\DoxyCodeLine{67 }
-\DoxyCodeLine{68     \textcolor{keywordflow}{return} r;}
-\DoxyCodeLine{69 \}}
+\DoxyCodeLine{60                                \{}
+\DoxyCodeLine{61     \textcolor{keywordtype}{int} r = 0;}
+\DoxyCodeLine{62     \textcolor{keywordflow}{if} (e -\/> num\_jogadas == 32 || (e-\/>ultima\_jogada.coluna == 0 \&\& e-\/>ultima\_jogada.linha == 7))}
+\DoxyCodeLine{63         r = 1;}
+\DoxyCodeLine{64     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{65         \textcolor{keywordflow}{if} ( e-\/> num\_jogadas == 32 || (e -\/>ultima\_jogada.linha == 0 \&\& e-\/>ultima\_jogada.coluna == 7))}
+\DoxyCodeLine{66             r = 2;}
+\DoxyCodeLine{67     \textcolor{keywordflow}{else}}
+\DoxyCodeLine{68         r = 0;}
+\DoxyCodeLine{69 }
+\DoxyCodeLine{70     \textcolor{keywordflow}{return} r;}
+\DoxyCodeLine{71 \}}
+
+\end{DoxyCode}
+\mbox{\Hypertarget{logica_8h_a1f170009451fe70e20c0d67e9918e2a0}\label{logica_8h_a1f170009451fe70e20c0d67e9918e2a0}} 
+\index{logica.h@{logica.h}!tabuleiro\_ficheiro@{tabuleiro\_ficheiro}}
+\index{tabuleiro\_ficheiro@{tabuleiro\_ficheiro}!logica.h@{logica.h}}
+\doxysubsubsection{\texorpdfstring{tabuleiro\_ficheiro()}{tabuleiro\_ficheiro()}}
+{\footnotesize\ttfamily void tabuleiro\+\_\+ficheiro (\begin{DoxyParamCaption}\item[{\mbox{\hyperlink{struct_e_s_t_a_d_o}{E\+S\+T\+A\+DO}} $\ast$}]{e,  }\item[{char}]{linha\mbox{[}$\,$\mbox{]} }\end{DoxyParamCaption})}
+
+
+
+Coloca o tabuleiro e o estado do jogo num ficheiro. 
+
+
+\begin{DoxyParams}{Parâmetros}
+{\em e} & Estado do jogo. \\
+\hline
+{\em linha} & Nome do ficheiro onde vai ser guardado o estado. \\
+\hline
+\end{DoxyParams}
+\begin{quote}
+Copia o nome do ficheiro presente na string \char`\"{}linha\char`\"{} e coloca na string \char`\"{}comando\char`\"{}, e concatena \char`\"{}.\+txt\char`\"{} no final. \end{quote}
+
+
+\begin{quote}
+Cria o ficheiro com o nome pedido pelo utilizador, ou abre-\/o, caso este ja exista. \end{quote}
+
+
+\begin{quote}
+Imprime o tabuleiro no ficheiro criado. \end{quote}
+
+
+\begin{quote}
+Coloca jogadas anteriores no ficheiro. \end{quote}
+
+
+Definido na linha 74 do ficheiro logica.\+c.
+
+
+\begin{DoxyCode}{0}
+\DoxyCodeLine{74                                                  \{}
+\DoxyCodeLine{75     \textcolor{keywordtype}{int} j = 0;}
+\DoxyCodeLine{76     \textcolor{keywordtype}{char} item;}
+\DoxyCodeLine{77     \textcolor{keywordtype}{char} comando[BUF\_SIZE];}
+\DoxyCodeLine{78 }
+\DoxyCodeLine{80     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 2; linha[i] != \textcolor{charliteral}{'\(\backslash\)n'}; i++) \{}
+\DoxyCodeLine{81         comando[j] = linha[i];}
+\DoxyCodeLine{82         j++;}
+\DoxyCodeLine{83     \}}
+\DoxyCodeLine{84     comando[j] = \textcolor{charliteral}{'\(\backslash\)0'};}
+\DoxyCodeLine{85     strcat(comando, \textcolor{stringliteral}{".txt"});}
+\DoxyCodeLine{86 }
+\DoxyCodeLine{88     FILE *fp;}
+\DoxyCodeLine{89     fp = fopen(comando, \textcolor{stringliteral}{"w"});}
+\DoxyCodeLine{90 }
+\DoxyCodeLine{92     \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < 8; i++) \{}
+\DoxyCodeLine{93         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} j = 0; j < 8; j++) \{}
+\DoxyCodeLine{94 }
+\DoxyCodeLine{95             \textcolor{keywordflow}{if} (i == 0 \&\& j == 7) \{}
+\DoxyCodeLine{96                 fprintf(fp, \textcolor{stringliteral}{"2"});}
+\DoxyCodeLine{97                 \textcolor{keywordflow}{break};}
+\DoxyCodeLine{98             \}}
+\DoxyCodeLine{99             \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (i == 7 \&\& j == 0) \{}
+\DoxyCodeLine{100                 fprintf(fp, \textcolor{stringliteral}{"1"});}
+\DoxyCodeLine{101                 j++;}
+\DoxyCodeLine{102             \}}
+\DoxyCodeLine{103 }
+\DoxyCodeLine{104             \textcolor{keywordflow}{else} \{}
+\DoxyCodeLine{105                 \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j) == VAZIO)}
+\DoxyCodeLine{106                     item = \textcolor{charliteral}{'.'};}
+\DoxyCodeLine{107                 \textcolor{keywordflow}{else} \textcolor{keywordflow}{if} (\mbox{\hyperlink{dados_8h_ad4e371755c518dbe632dc8cb1280cdad}{obter\_casa}}(e, i, j) == BRANCA)}
+\DoxyCodeLine{108                     item = \textcolor{charliteral}{'*'};}
+\DoxyCodeLine{109                 \textcolor{keywordflow}{else}}
+\DoxyCodeLine{110                     item = \textcolor{charliteral}{'\#'};}
+\DoxyCodeLine{111             \}}
+\DoxyCodeLine{112             fprintf(fp, \textcolor{stringliteral}{"\%c"}, item);}
+\DoxyCodeLine{113         \}}
+\DoxyCodeLine{114         fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{115     \}}
+\DoxyCodeLine{117     \textcolor{keywordflow}{if} (e-\/>jogador\_atual == 2) \{}
+\DoxyCodeLine{118         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i <= e-\/>num\_jogadas; i++) \{}
+\DoxyCodeLine{119             \textcolor{keywordflow}{if}(i < 10)}
+\DoxyCodeLine{120                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "},i+1);}
+\DoxyCodeLine{121             \textcolor{keywordflow}{else}}
+\DoxyCodeLine{122                 fprintf(fp, \textcolor{stringliteral}{"\%d: "},i+1);}
+\DoxyCodeLine{123 }
+\DoxyCodeLine{124             \textcolor{keywordflow}{if} (i != e-\/>num\_jogadas) \{}
+\DoxyCodeLine{125                 fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"}, e-\/>jogadas[i].jogador1.coluna + \textcolor{charliteral}{'a'}, e-\/>jogadas[i].jogador1.linha+1, e-\/>jogadas[i].jogador2.coluna + \textcolor{charliteral}{'a'}, e-\/>jogadas[i].jogador2.linha+1);}
+\DoxyCodeLine{126             \}}
+\DoxyCodeLine{127             \textcolor{keywordflow}{else}}
+\DoxyCodeLine{128                 fprintf(fp,\textcolor{stringliteral}{"\%c\%d"}, e-\/>jogadas[i].jogador1.coluna + \textcolor{charliteral}{'a'}, e-\/>jogadas[i].jogador1.linha+1);}
+\DoxyCodeLine{129             fprintf(fp,\textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{130         \}}
+\DoxyCodeLine{131     \}}
+\DoxyCodeLine{132 }
+\DoxyCodeLine{133     \textcolor{keywordflow}{if} (e-\/>jogador\_atual == 1) \{}
+\DoxyCodeLine{134         \textcolor{keywordflow}{for} (\textcolor{keywordtype}{int} i = 0; i < e-\/>num\_jogadas; i++) \{}
+\DoxyCodeLine{135             \textcolor{keywordflow}{if} (i < 10)}
+\DoxyCodeLine{136                 fprintf(fp, \textcolor{stringliteral}{"0\%d: "}, i+1);}
+\DoxyCodeLine{137             \textcolor{keywordflow}{else}}
+\DoxyCodeLine{138                 fprintf(fp, \textcolor{stringliteral}{"\%d: "}, i+1);}
+\DoxyCodeLine{139 }
+\DoxyCodeLine{140             fprintf(fp, \textcolor{stringliteral}{"\%c\%d \%c\%d"},  e-\/>jogadas[i].jogador1.coluna + \textcolor{charliteral}{'a'}, e-\/>jogadas[i].jogador1.linha+1, e-\/>jogadas[i].jogador2.coluna + \textcolor{charliteral}{'a'}, e-\/>jogadas[i].jogador2.linha+1);}
+\DoxyCodeLine{141             fprintf(fp, \textcolor{stringliteral}{"\(\backslash\)n"});}
+\DoxyCodeLine{142         \}}
+\DoxyCodeLine{143     \}}
+\DoxyCodeLine{144     fclose(fp);}
+\DoxyCodeLine{145 \}}
 
 \end{DoxyCode}
